@@ -1,7 +1,12 @@
+(25/06/14)
+==========
+
+· Adding compatibility with raspbian-ua-netinst (https://github.com/debian-pi/raspbian-ua-netinst)
+
 (24/06/14)
 ==========
 
-· Updated check_lastmod_img, crispy-doom, Quake 2
+· Updated check_lastmod_img, crispy-doom, Quake 2, MAME4ALL
 
 (18/06/14)
 ==========
